[project]
name="options_pricer"
version="0.1.0"
description="A Python package for options pricing"
requires-python = ">=3.8"
authors = [
    { name="Your_Name", email="youremail@gmail.com"},
    ]
dependencies = [
  "numpy>=1.20.0",
  "scipy>=1.6.0",
  "matplotlib>=3.3.0",
  "pandas_datareader>=0.10.0",
]

[project.scripts]
price-option = "options_pricer.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"